--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ axum = "0.6"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 axum-client-ip = "0.4"
-trust-dns-client = "0.22"
+trust-dns-resolver = "0.22"
