--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 axum-client-ip = "0.4"
 trust-dns-resolver = "0.22"
+tower-http = { version = "0.4", features = ["cors"] }
